--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,3 +7,16 @@ body {
   text-align: center;
   padding: 20px;
 }
+
+h1 {
+  color: cornflowerblue;
+
+  small {
+    font-weight: 100;
+    color: aliceblue;
+    background-color: #ddd;
+    display: inline-block;
+    padding: 1rem 2rem;
+    margin: 1rem auto;
+  }
+}
