--- a/css/main.css
+++ b/css/main.css
@@ -8,16 +8,17 @@ body {
   padding: 20px;
 }
 
-h1 {
-  color: #003482;
+nav {
+  background: #333;
+  padding: 10px;
 }
-h1 small {
-  font-weight: 100;
-  color: aliceblue;
-  background-color: #ddd;
-  display: inline-block;
-  padding: 1rem 2rem;
-  margin: 1rem auto;
+nav a {
+  color: white;
+  margin: 0 15px;
+  text-decoration: none;
+}
+nav a:hover {
+  text-decoration: underline;
 }
 
 /*# sourceMappingURL=main.css.map */
