--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,15 +8,17 @@ body {
   padding: 20px;
 }
 
-h1 {
-  color: #003482;
+nav {
+  background: #333;
+  padding: 10px;
 
-  small {
-    font-weight: 100;
-    color: aliceblue;
-    background-color: #ddd;
-    display: inline-block;
-    padding: 1rem 2rem;
-    margin: 1rem auto;
+  a {
+    color: white;
+    margin: 0 15px;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
